--- a/index.html
+++ b/index.html
@@ -3,8 +3,36 @@
 <head>
   <meta charset="utf-8">
   <title>Price</title>
+  <style>
+  p.big {
+		color: blue; font-size: 20px; text-align: center; font-style: bold;
+	}  
+	p.right {text-align: right;font-size: 15px}
+	p.center { font-size: 20px; text-align: center; font-style: bold;}
+	p.left {font-size: 15px; text-align: left; font-style: bold}
+	p.underlined {font-size: 15px; text-decoration: underline;}
+	p.caps {font-size: 20px}
+	p.indent {margin-left: 100px; font-size: 15px}
+  </style>
 </head>
 <body>
-<h1>Юличка, у меня получилось: Прайс от 20.04.2021!!!</h1>
+<h1>
+  <p class="right">на 30.11.2020</p>
+  <p class="big">ПРАЙС - ЛИСТ</p>
+  <p class="center">ИП Шикин С.В.</p>
+  <p class="left">г.Пермь факс тел. 275-51-83, 275-68-21  - офис, 8-912-497-26-65</p>
+  <p class="underlined">seiner-perm@mail.ru</p>
+  <p class="caps">ОТПУСК ПРОИЗВОДИТЬСЯ:</p>
+  <p class="left">База ОПТПРОДТОРГ по адресу:</p>
+  <p class="left">ул.Г-Хасана 98    склад  №2  тел. 8-912-5849-049 Ольга Тимофеевна</p>
+  <p class="indent">склад  №6  тел. 8-902-4778-816  Галина Михайловна</p>
+  <p class="left">База ГАСТРОНОМ по адресу:</p>
+  <p class="left"> ул. 3-я ВОДОПРОВОДНАЯ 1 склад №300 тел. 224-27-27 Мила</p>
+  <p class="left">База Кунгур</p>
+  <p class="left">г. Кунгур, ул. Просвещения, 1  тел. 8-951-953-5888    Вероника</p>
+  <p>
+  	<img src="210504.JPG" width="1260" height="4200" alt="Picture width a quote">
+  </p>
+  </h1>
 </body>
 </html>
