--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   <p class="left">База Кунгур</p>
   <p class="left">г. Кунгур, ул. Просвещения, 1  тел. 8-951-953-5888    Вероника</p>
   <p>
-  	<img src="210504.JPG" width="1260" height="4200" alt="Picture width a quote">
+  	<img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.6435-9/182438616_1874001249434406_4827827855825032576_n.jpg?_nc_cat=106&ccb=1-3&_nc_sid=730e14&_nc_ohc=tG7cBehAfwUAX_F_Tfx&_nc_ht=scontent-arn2-1.xx&oh=2e769295f0ce2292e1c65105d6fd8e44&oe=60B7825F
+" width="1260" height="4200" alt="Picture width a quote">
   </p>
   </h1>
 </body>
