--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <h1>
-  <p class="right">на 30.11.2020</p>
+  <p class="right">на 04.05.2021</p>
   <p class="big">ПРАЙС - ЛИСТ</p>
   <p class="center">ИП Шикин С.В.</p>
   <p class="left">г.Пермь факс тел. 275-51-83, 275-68-21  - офис, 8-912-497-26-65</p>
@@ -31,7 +31,7 @@
   <p class="left">База Кунгур</p>
   <p class="left">г. Кунгур, ул. Просвещения, 1  тел. 8-951-953-5888    Вероника</p>
   <p>
-  	<img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.6435-9/182438616_1874001249434406_4827827855825032576_n.jpg?_nc_cat=106&ccb=1-3&_nc_sid=730e14&_nc_ohc=tG7cBehAfwUAX_F_Tfx&_nc_ht=scontent-arn2-1.xx&oh=2e769295f0ce2292e1c65105d6fd8e44&oe=60B7825F
+  	<img src="https://mail.yandex.ru/message_part/%D0%9E%D0%B1%D1%892.jpg?_uid=112423353&name=%D0%9E%D0%B1%D1%892.jpg&hid=1.2&ids=175921860444175750&no_disposition=y&exif_rotate=y
 " width="1260" height="4200" alt="Picture width a quote">
   </p>
   </h1>
