--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <p class="left">База Кунгур</p>
   <p class="left">г. Кунгур, ул. Просвещения, 1  тел. 8-951-953-5888    Вероника</p>
   <p>
-  	<img src="https://mail.yandex.ru/message_part/%D0%9E%D0%B1%D1%892.jpg?_uid=112423353&name=%D0%9E%D0%B1%D1%892.jpg&hid=1.2&ids=175921860444175750&no_disposition=y&exif_rotate=y
+  	<img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.6435-9/182579145_1874413036059894_1425159121067077492_n.jpg?_nc_cat=110&ccb=1-3&_nc_sid=730e14&_nc_ohc=0cZwM0s19BYAX_i-p-k&_nc_ht=scontent-arn2-1.xx&oh=e9d64c06500ea09175bb04baeb800705&oe=60B6ED60
 " width="1260" height="4200" alt="Picture width a quote">
   </p>
   </h1>
