--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
   	<img src="https://scontent-arn2-2.xx.fbcdn.net/v/t1.6435-9/181489547_1874438579390673_4125702207399131585_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=730e14&_nc_ohc=fRscL5zT790AX9DuKJW&_nc_ht=scontent-arn2-2.xx&oh=110022b38e88ec79b745ffb5689c09d1&oe=60B6FF62
 " width="1260" height="4200" alt="Picture width a quote">
   </p>
+  <p>
+	<img src="Seldss.JPG" width="392" height="294" alt="Picture width a quote"> &quot; Text 1 &quot;
+</p>
   </h1>
 </body>
 </html>
