--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 " width="1260" height="4200" alt="Picture width a quote">
   </p>
   <p>
-	<img src="Seldss.JPG" width="392" height="294" alt="Picture width a quote"> &quot; Text 1 &quot;
+	<img src="Seldss.JPG" width="392" height="294" alt="Picture width a quote"> &quot; Сельдь с/с &quot;
 </p>
   </h1>
 </body>
