--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
   <p>
 	<img src="Seldss.JPG" width="392" height="294" alt="Picture width a quote"> &quot; Сельдь с/с &quot;
 </p>
+  <p>
+	<img src="https://scontent-arn2-2.xx.fbcdn.net/v/t1.6435-9/180525513_1870791126422085_7792737807338248062_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=730e14&_nc_ohc=QmKn3GGdG3QAX-9NSSc&_nc_ht=scontent-arn2-2.xx&oh=829241fb2b93a150d63e71d7353a2ac2&oe=60B2F84F" alt="Text" width="392" height="294"> &quot; Сельдь с/с &quot;
+</p>
   </h1>
 </body>
 </html>
