--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
   <p class="left">База Кунгур</p>
   <p class="left">г. Кунгур, ул. Просвещения, 1  тел. 8-951-953-5888    Вероника</p>
   <p>
-  	<img src="https://scontent-arn2-2.xx.fbcdn.net/v/t1.6435-9/181489547_1874438579390673_4125702207399131585_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=730e14&_nc_ohc=fRscL5zT790AX9DuKJW&_nc_ht=scontent-arn2-2.xx&oh=110022b38e88ec79b745ffb5689c09d1&oe=60B6FF62
-" width="1260" height="4200" alt="Picture width a quote">
-  </p>  
+	<img src="https://scontent-arn2-2.xx.fbcdn.net/v/t1.6435-9/181489547_1874438579390673_4125702207399131585_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=730e14&_nc_ohc=fRscL5zT790AX9DuKJW&_nc_ht=scontent-arn2-2.xx&oh=110022b38e88ec79b745ffb5689c09d1&oe=60B6FF62
+" width="1260" height="4200" alt="Text" >
+</p>  
   <p>
-	<img src="https://scontent-arn2-2.xx.fbcdn.net/v/t1.6435-9/180525513_1870791126422085_7792737807338248062_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=730e14&_nc_ohc=QmKn3GGdG3QAX-9NSSc&_nc_ht=scontent-arn2-2.xx&oh=829241fb2b93a150d63e71d7353a2ac2&oe=60B2F84F" alt="Text" width="392" height="294"> &quot; Сельдь с/с &quot;
+	<img src="https://scontent-arn2-2.xx.fbcdn.net/v/t1.6435-9/180525513_1870791126422085_7792737807338248062_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=730e14&_nc_ohc=QmKn3GGdG3QAX-9NSSc&_nc_ht=scontent-arn2-2.xx&oh=829241fb2b93a150d63e71d7353a2ac2&oe=60B2F84F" width="392" height="294" alt="Text" > &quot; Сельдь с/с &quot;
 </p>
   </h1>
 </body>
