--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   p.big {
 		color: blue; font-size: 20px; text-align: center; font-style: bold;
 	}  
-	p.right {text-align: right;font-size: 15px}
-	p.center { font-size: 20px; text-align: center; font-style: bold;}
+	p.right {text-align: right;font-size: 25px}
+	p.center { font-size: 25px; text-align: center; font-style: bold;}
 	p.left {font-size: 15px; text-align: left; font-style: bold}
 	p.underlined {font-size: 15px; text-decoration: underline;}
 	p.caps {font-size: 20px}
@@ -16,6 +16,7 @@
   </style>
 </head>
 <body>
+<h2 id="top">1 стр.</h2>
 <h1>
   <p class="right">на 04.05.2021</p>
   <p class="big">ПРАЙС - ЛИСТ</p>
@@ -35,17 +36,24 @@
 " width="1260" height="4200" alt="Text" >
 </p>  
 <p class="center">ФОТО</p>
-<P>РЫБА ХОЛОДНОГО КОПЧЕНИЯ</P>
-<P>ГОРЯЧЕГО КОПЧЕНИЯ</P>
-<P>РЫБА С/СОЛЁНАЯ</P>
-<P>ПРЕСЕРВЫ</P>
-<P>ВАКУУМНАЯ УПАКОВКА</P>
-  <OL>
+<section>
+<ul>
+  <li><a href="#РЫБА ХОЛОДНОГО КОПЧЕНИЯ">РЫБА ХОЛОДНОГО КОПЧЕНИЯ</a></li>
+  <li><a href="#ГОРЯЧЕГО КОПЧЕНИЯ">ГОРЯЧЕГО КОПЧЕНИЯ</a></li>
+  <li><a href="#РЫБА С/СОЛЁНАЯ">РЫБА С/СОЛЁНАЯ</a></li>
+  <li><a href="#ПРЕСЕРВЫ">ПРЕСЕРВЫ</a></li>
+  <li><a href="#ВАКУУМНАЯ УПАКОВКА">ВАКУУМНАЯ УПАКОВКА</a></li>
+</ul>
+</section>
+<OL>
+<section id="РЫБА ХОЛОДНОГО КОПЧЕНИЯ">  
     <li>
     <p>РЫБА Х/КОПЧЕНИЯ</p>
     <p>  <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.6435-0/p526x296/182943557_1876751382492726_639286882930169971_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=730e14&_nc_ohc=rZyPi9mtx-YAX8swyoo&_nc_ht=scontent-arn2-1.xx&tp=6&oh=756e84a822f0f7cd14f1b4bcdea35bd8&oe=60B99A59" width="500" height="743,344" alt="Text" > &quot; СКУМБРИЯ АТЛАНТИЧЕСКАЯ Х/К БЕЗ ГОЛОВЫ 300+ 3 кг. &quot;</p>
     </li>
     <li>
+      </section>
+<section id="РЫБА С/СОЛЁНАЯ">
     <P>РЫБА С/СОЛЁНАЯ</P>
     <p>  <img src="https://scontent-arn2-2.xx.fbcdn.net/v/t1.6435-9/180525513_1870791126422085_7792737807338248062_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=730e14&_nc_ohc=QmKn3GGdG3QAX-9NSSc&_nc_ht=scontent-arn2-2.xx&oh=829241fb2b93a150d63e71d7353a2ac2&oe=60B2F84F" width="392" height="294" alt="Text" > &quot; СЕЛЬДЬ АТЛАНТИЧЕСКАЯ СЛАБОСОЛЁНАЯ 350+ 4 кг. &quot;</p>  
     </li>
@@ -53,17 +61,23 @@
     <p>
   <img src="https://scontent-arn2-2.xx.fbcdn.net/v/t1.6435-0/c19.0.206.206a/p206x206/182900717_1875260132641851_3946527415804271883_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=da31f3&_nc_ohc=9xEqRyYReF0AX_ItdgJ&tn=DELuHesrsAyrhBLm&_nc_ht=scontent-arn2-2.xx&tp=27&oh=273277d1cf2f15e30c3c05bfb9d53076&oe=60B799B2" width="349,125" height="294" alt="Text" > &quot; ФОРЕЛЬ КУСОК СЛАБОСОЛЁНАЯ 2,5 кг. &quot;
 </p>  
-    </li> 
+    </li>
+    </section>
+<section id="ПРЕСЕРВЫ">
     <li>
     <P>ПРЕСЕРВЫ</P>
     <p>  <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.6435-0/p180x540/182726891_1876821999152331_811151879995644553_n.jpg?_nc_cat=110&ccb=1-3&_nc_sid=730e14&_nc_ohc=4Y_26pH8_b8AX_fMRX3&_nc_ht=scontent-arn2-1.xx&tp=6&oh=b9aa842dd85e3739c56ebeb288eab89e&oe=60B93756" width="505" height="258,234" alt="Text" > &quot; СЕЛЬДЬ ФИЛЕ-КУСОЧКИ 180 гр. В МАСЛЕ &quot;</p>  
     </li>
+    </section>
+<section id="ВАКУУМНАЯ УПАКОВКА">
     <li>
     <P>ВАКУУМНАЯ УПАКОВКА</P>
     <p>  <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.6435-0/p526x296/182819424_1876766832491181_7280478867743230182_n.jpg?_nc_cat=107&ccb=1-3&_nc_sid=730e14&_nc_ohc=qCdN7g-5a8oAX-tETmm&tn=bSslJdluDsSsc5Ff&_nc_ht=scontent-arn2-1.xx&tp=6&oh=aa340932c51deac41c4c913f7d5eb5c8&oe=60BADEA0" width="500" height="751,891" alt="Text" > &quot; ФОРЕЛЬ СЛАБОСОЛЁНАЯ НАБОР К ПИВУ ВУ 100 гр. &quot;</p>  
     </li>
+    </section>
   </OL>
   
   </h1>
+  <h2>Вернуться в начало 1 стр.: <a href="#top">Вернуться в начало 1 стр.</a></h2>
 </body>
 </html>
