--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <p class="left">г. Кунгур, ул. Просвещения, 1  тел. 8-951-953-5888    Вероника</p>
   <p>
 	<img src="https://scontent-arn2-2.xx.fbcdn.net/v/t1.6435-9/181489547_1874438579390673_4125702207399131585_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=730e14&_nc_ohc=fRscL5zT790AX9DuKJW&_nc_ht=scontent-arn2-2.xx&oh=110022b38e88ec79b745ffb5689c09d1&oe=60B6FF62
-" width="1260" height="4200" alt="Text" >
+" width="1250" height="4280" alt="Text" >
 </p>  
 <p class="center">ФОТО</p>
 <section>
@@ -49,7 +49,8 @@
 <section id="РЫБА ХОЛОДНОГО КОПЧЕНИЯ">  
     <li>
     <p>РЫБА Х/КОПЧЕНИЯ</p>
-    <p>  <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.6435-0/p526x296/182943557_1876751382492726_639286882930169971_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=730e14&_nc_ohc=rZyPi9mtx-YAX8swyoo&_nc_ht=scontent-arn2-1.xx&tp=6&oh=756e84a822f0f7cd14f1b4bcdea35bd8&oe=60B99A59" width="500" height="743,344" alt="Text" > &quot; СКУМБРИЯ АТЛАНТИЧЕСКАЯ Х/К БЕЗ ГОЛОВЫ 300+ 3 кг. &quot;</p>
+    <p>  <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.6435-0/p526x296/182943557_1876751382492726_639286882930169971_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=730e14&_nc_ohc=rZyPi9mtx-YAX8swyoo&_nc_ht=scontent-arn2-1.xx&tp=6&oh=756e84a822f0f7cd14f1b4bcdea35bd8&oe=60B99A59" width="500" height="743,344
+      " alt="Text" > &quot; СКУМБРИЯ АТЛАНТИЧЕСКАЯ Х/К БЕЗ ГОЛОВЫ 300+ 3 кг. &quot;</p>
     </li>
     <li>
       </section>
