--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
   </OL>
   
   </h1>
+  <h2>Предложения по улучшению сайта прошу отправлять на эл.почту: shikin.sergej@yandex.ru
   <h2>Вернуться в начало 1 стр.: <a href="#top">Вернуться в начало 1 стр.</a></h2>
 </body>
 </html>
+
