--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
     </li>
     <li>
       </section>
+<section id="ГОРЯЧЕГО КОПЧЕНИЯ">
+    <P>ГОРЯЧЕГО КОПЧЕНИЯ</P>
+    <p>  <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.6435-0/p526x296/186464330_1882041488630382_4417928836241798531_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=730e14&_nc_ohc=cr6GnTHi1AAAX-gaWt4&_nc_ht=scontent-arn2-1.xx&tp=6&oh=5a9c532a552fd48a3065b9bf5d54e35a&oe=60C4F405" width="500" height="682.500" alt="Text" > &quot; СКУМБРИЯ АТЛАНТИЧЕСКАЯ Г/К БЕЗ ГОЛОВЫ 3 кг. &quot;</p>  
+    </li>
+    <li>
+      </section>
 <section id="РЫБА С/СОЛЁНАЯ">
     <P>РЫБА С/СОЛЁНАЯ</P>
     <p>  <img src="https://scontent-arn2-2.xx.fbcdn.net/v/t1.6435-9/180525513_1870791126422085_7792737807338248062_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=730e14&_nc_ohc=QmKn3GGdG3QAX-9NSSc&_nc_ht=scontent-arn2-2.xx&oh=829241fb2b93a150d63e71d7353a2ac2&oe=60B2F84F" width="392" height="294" alt="Text" > &quot; СЕЛЬДЬ АТЛАНТИЧЕСКАЯ СЛАБОСОЛЁНАЯ 350+ 4 кг. &quot;</p>  
