--- a/index.html
+++ b/index.html
@@ -48,21 +48,25 @@
 </section>
 <OL>
 <section id="РЫБА ХОЛОДНОГО КОПЧЕНИЯ">  
-    <li>
     <p>РЫБА Х/КОПЧЕНИЯ</p>
-    <p>  <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.6435-0/p526x296/182943557_1876751382492726_639286882930169971_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=730e14&_nc_ohc=rZyPi9mtx-YAX8swyoo&_nc_ht=scontent-arn2-1.xx&tp=6&oh=756e84a822f0f7cd14f1b4bcdea35bd8&oe=60B99A59" width="500" height="743,344
-      " alt="Text" > &quot; СКУМБРИЯ АТЛАНТИЧЕСКАЯ Х/К БЕЗ ГОЛОВЫ 300+ 3 кг. &quot;</p>
-    </li>
     <li>
+        <p>  <img src="https://scontent-arn2-2.xx.fbcdn.net/v/t1.6435-0/p526x296/186510391_1883158265185371_1766192797549902029_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=730e14&_nc_ohc=698PuYc3l-8AX92N74B&_nc_ht=scontent-arn2-2.xx&tp=6&oh=de18f3e2409b40495c5c91a75b924d3f&oe=60C3EE32" width="500" height="875,469
+      " alt="Text" > &quot; САЛАКА Х/К &quot;</p>
+    </li>
+    <li>    <p>  <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.6435-0/p526x296/182943557_1876751382492726_639286882930169971_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=730e14&_nc_ohc=rZyPi9mtx-YAX8swyoo&_nc_ht=scontent-arn2-1.xx&tp=6&oh=756e84a822f0f7cd14f1b4bcdea35bd8&oe=60B99A59" width="500" height="743,344
+      " alt="Text" > &quot; СКУМБРИЯ АТЛАНТИЧЕСКАЯ Х/К БЕЗ ГОЛОВЫ 300+ 3 кг. &quot;</p>
+    </li>  
       </section>
 <section id="ГОРЯЧЕГО КОПЧЕНИЯ">
-    <P>ГОРЯЧЕГО КОПЧЕНИЯ</P>
+  <P>ГОРЯЧЕГО КОПЧЕНИЯ</P>
+  <li>
     <p>  <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.6435-0/p526x296/186464330_1882041488630382_4417928836241798531_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=730e14&_nc_ohc=cr6GnTHi1AAAX-gaWt4&_nc_ht=scontent-arn2-1.xx&tp=6&oh=5a9c532a552fd48a3065b9bf5d54e35a&oe=60C4F405" width="500" height="682.500" alt="Text" > &quot; СКУМБРИЯ АТЛАНТИЧЕСКАЯ Г/К БЕЗ ГОЛОВЫ 3 кг. &quot;</p>  
-    </li>
-    <li>
+    </li>    
       </section>
 <section id="РЫБА С/СОЛЁНАЯ">
+
     <P>РЫБА С/СОЛЁНАЯ</P>
+    <li>
     <p>  <img src="https://scontent-arn2-2.xx.fbcdn.net/v/t1.6435-9/180525513_1870791126422085_7792737807338248062_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=730e14&_nc_ohc=QmKn3GGdG3QAX-9NSSc&_nc_ht=scontent-arn2-2.xx&oh=829241fb2b93a150d63e71d7353a2ac2&oe=60B2F84F" width="392" height="294" alt="Text" > &quot; СЕЛЬДЬ АТЛАНТИЧЕСКАЯ СЛАБОСОЛЁНАЯ 350+ 4 кг. &quot;</p>  
     </li>
    <li>
@@ -72,16 +76,15 @@
     </li>
     </section>
 <section id="ПРЕСЕРВЫ">
-    <li>
     <P>ПРЕСЕРВЫ</P>
+    <li>
     <p>  <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.6435-0/p180x540/182726891_1876821999152331_811151879995644553_n.jpg?_nc_cat=110&ccb=1-3&_nc_sid=730e14&_nc_ohc=4Y_26pH8_b8AX_fMRX3&_nc_ht=scontent-arn2-1.xx&tp=6&oh=b9aa842dd85e3739c56ebeb288eab89e&oe=60B93756" width="505" height="258,234" alt="Text" > &quot; СЕЛЬДЬ ФИЛЕ-КУСОЧКИ 180 гр. В МАСЛЕ &quot;</p>  
     </li>
     </section>
 <section id="ВАКУУМНАЯ УПАКОВКА">
-    <li>
     <P>ВАКУУМНАЯ УПАКОВКА</P>
+    <li>
     <p>  <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.6435-0/p526x296/182819424_1876766832491181_7280478867743230182_n.jpg?_nc_cat=107&ccb=1-3&_nc_sid=730e14&_nc_ohc=qCdN7g-5a8oAX-tETmm&tn=bSslJdluDsSsc5Ff&_nc_ht=scontent-arn2-1.xx&tp=6&oh=aa340932c51deac41c4c913f7d5eb5c8&oe=60BADEA0" width="500" height="751,891" alt="Text" > &quot; ФОРЕЛЬ СЛАБОСОЛЁНАЯ НАБОР К ПИВУ ВУ 100 гр. &quot;</p>  
-    </li>
     </section>
   </OL>
   
