--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p>  <img src="https://scontent-arn2-2.xx.fbcdn.net/v/t1.6435-0/p526x296/186510391_1883158265185371_1766192797549902029_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=730e14&_nc_ohc=698PuYc3l-8AX92N74B&_nc_ht=scontent-arn2-2.xx&tp=6&oh=de18f3e2409b40495c5c91a75b924d3f&oe=60C3EE32" width="500" height="875,469
       " alt="Text" > &quot; САЛАКА Х/К &quot;</p>
     </li>
-    <li>    <p>  <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.6435-0/p526x296/182943557_1876751382492726_639286882930169971_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=730e14&_nc_ohc=rZyPi9mtx-YAX8swyoo&_nc_ht=scontent-arn2-1.xx&tp=6&oh=756e84a822f0f7cd14f1b4bcdea35bd8&oe=60B99A59" width="500" height="743,344
+    <li>    <p>  <img src="https://yadi.sk/i/cCAjvP8RLU0eow" width="500" height="743,344
       " alt="Text" > &quot; СКУМБРИЯ АТЛАНТИЧЕСКАЯ Х/К БЕЗ ГОЛОВЫ 300+ 3 кг. &quot;</p>
     </li>  
       </section>
