--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p>  <img src="https://scontent-arn2-2.xx.fbcdn.net/v/t1.6435-0/p526x296/186510391_1883158265185371_1766192797549902029_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=730e14&_nc_ohc=698PuYc3l-8AX92N74B&_nc_ht=scontent-arn2-2.xx&tp=6&oh=de18f3e2409b40495c5c91a75b924d3f&oe=60C3EE32" width="500" height="875,469
       " alt="Text" > &quot; САЛАКА Х/К &quot;</p>
     </li>
-    <li>    <p>  <img src="https://yadi.sk/i/cCAjvP8RLU0eow" width="500" height="743,344
+    <li>    <p>  <img src="https://downloader.disk.yandex.ru/preview/ea6db7138456661e5a1105f0be06cde0147cedd73be362d194bf1c6e3c68d30b/60d02681/-iEoH_0TAna_UcD5UA-cxJ_i8CiC7gMxqrAuDICIfoJVer2mutM2kZLgEB8-0T3pMXG4VZ3pk_ITkyvrkNLrTA%3D%3D?uid=0&filename=%D0%A1%D0%9A%D0%A3%D0%9C%D0%91%D0%A0%D0%98%D0%AF%20%D0%90%D0%A2%D0%9B%D0%90%D0%9D%D0%A2%D0%98%D0%A7%D0%95%D0%A1%D0%9A%D0%90%D0%AF%20%D0%A5%D0%9A%20%D0%91%D0%95%D0%97%20%D0%93%D0%9E%D0%9B%D0%9E%D0%92%D0%AB%20300%2B%203%20%D0%BA%D0%B3..jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&owner_uid=0&tknv=v2&size=1366x663" width="500" height="743,344
       " alt="Text" > &quot; СКУМБРИЯ АТЛАНТИЧЕСКАЯ Х/К БЕЗ ГОЛОВЫ 300+ 3 кг. &quot;</p>
     </li>  
       </section>
