--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <li>        <p>  <img src="https://scontent-arn2-2.xx.fbcdn.net/v/t1.6435-0/p526x296/186510391_1883158265185371_1766192797549902029_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=730e14&_nc_ohc=698PuYc3l-8AX92N74B&_nc_ht=scontent-arn2-2.xx&tp=6&oh=de18f3e2409b40495c5c91a75b924d3f&oe=60C3EE32" width="500" height="875,469
       " alt="Text" > &quot; САЛАКА Х/К 3КГ. &quot;</p>
     </li>
-    <li>    <p>  <img src="https://www.behance.net/portfolio/editor?project_id=122183657" width="500" height="743,344
+    <li>    <p>  <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400_opt_1/81f18e122183657.60d4606fdbf09.png" width="500" height="743,344
       " alt="Text" > &quot; СКУМБРИЯ АТЛАНТИЧЕСКАЯ Х/К БЕЗ ГОЛОВЫ 300+ 3 кг. &quot;</p>
     </li>  
       </section>
