--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <p class="center">ИП Шикин С.В.</p>
   <p class="left">г.Пермь факс тел. 275-51-83, 275-68-21  - офис, 8-912-497-26-65</p>
   <p class="underlined">seiner-perm@mail.ru</p>
-  <p class="caps">ОТПУСК ПРОИЗВОДИТЬСЯ:</p>
+  <p class="caps">ОТПУСК ПРОИЗВОДИТСЯ:</p>
   <p class="left">База ОПТПРОДТОРГ по адресу:</p>
   <p class="left">ул.Г-Хасана 98    склад  №2  тел. 8-912-5849-049 Ольга Тимофеевна</p>
   <p class="indent">склад  №6  тел. 8-902-4778-816  Галина Михайловна</p>
